Added reset all filters button

--- a/FormLogScraper.resx
+++ b/FormLogScraper.resx
@@ -132,6 +132,20 @@
   <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="BtnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAexJREFUSEuV
+        lL9qVkEQxX/jEwQsNF16G6OGSLDQQrAQ8QFCqoCkEEVSKCSQwmcSBMFHsBEsJGCRUtDEqAEVZe49e3f2
+        z/0kB+639ztzds7O7N6Fc8IWEU2wxFL8M2gXTugENamNGFtgX4GrmToP5sqwyXQb+At8AW6IfQD8Ft99
+        zEcLnPEqZK+XaTsSnoDdlPFDNxkSxScmLfk3MWPTB4Nk8s1grYwGxA0yHmvOZ+BSpRRKox2wwQTYKCIt
+        rgO/gD/A7ZGajBfiqVb1A2wjLnjA+H4ROJJur9EEYQdDIJik1U24ALzVJr/2CU2qhuhxxnOZnBUmxkvx
+        R5h/P2VbcjX5mFYo+rGvZD+BeyI3wfwIr1W5ZxBdGsfhy0xH0yuRid0PIlHTT8+xZRLid2BuYm4yry+Q
+        ZbpD+vNUgR2omtiufvVFntnAhNQix8FYjXm77la6jFmDPlKLVqRyg7Qnd2px7EoxtoHp/Z0q+OQmYT98
+        /A7civp2vWL6NQzsMsZHJXaTVNELjafm10o/QQ+9VXAZZJJvU8eu3v3uWi9m1C2KaJo0IpuMe5CCu2qX
+        m1zL8gJK8x8zmXwA3ufgUPEzGR8Dq6O02oiZVdcGQmfPjCeq7FAX4hzmzJqUHcoeAVcmvpncdCqa9W0n
+        TWMG/wCbz3YvZOfWxgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="BtnConfig.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAWJJREFUOE+1
@@ -191,43 +205,43 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAYggAAAJNU0Z0AUkBTAIBAQIB
-        AAEQAQABEAEAASQBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABkAMAARgDAAEBAQABIAYAATb/
-        AP8A/wD/AP8A/wDsAAMzAVQDLAHbAwAB/wMAAf8DAAH/AQABAQEAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
-        /wMAAf8DLwHYAzMBVP8A/wAKAAMwAdUCAAEBAf8DAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB
-        /wMAAf8DAAH/AwAB/wEBAgAB/wIwATEB1WQAAyYBOQNEAZkDPQHBARgCFwHuAx0B6wM9AcEDRQGYAyUB
-        NgwAAzIBUP8AdQABAQIAAf8CAAEBAf8rAAH/AwAB/1wAAwUBBgNEAYkDBAH9AwAB/wEAAQEBAAH/AwAB
-        /wMAAf8DAAH/AQECAAH/AwQB/ANDAYcDBQEGAkQBRQGPAzoBxv8AeAAB/wMAAf8rAAH/AwAB/1gAAwMB
-        BAM5AcoBAAEBAQAB/wEBAgAB/wNEAaQDMgFPAxEBFgMVAR0DMwFRAUUCRAGkAwAB/wMAAf8DHQHrAwAB
-        /wM7AcX/AHUAAQECAAH/AgABAQH/CgABAQH/AQABAQEAAf8LAAH/AwAB/wsAAf8DAAH/WAADQwGDAwAB
-        /wMgAecDLAFEGAADLQFGAQ4BDwEOAfcDAAH/AwAB/wM7AcX/AHUAAQECAAH/AgABAQH/CgABAQH/AwAB
-        /wsAAf8DAAH/CAABAQIAAf8DAAH/VAADGAEgAwIB/gMCAf4DJgE4HAADQAF3AwAB/wEBAgAB/wMAAf8D
-        OwHF/wB1AAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8DAAH/CAABAQIAAf8DAAH/IAADOAFfAz4BbywAA0IB
-        gQMAAf8DRQGdHAADPAFoAgABAQH/AQABAQEAAf8BAQIAAf8DAAH/AzkBxxwAAzgBXwM+AW//AFEAAQEC
-        AAH/AwAB/wsAAf8BAAEBAQAB/wsAAf8DAAH/CwAB/wIAAQEB/xwAAy0BRQMAAf8DAAH/AzYBWSgAAyEB
-        LwMqAUADDwEUTAADLQFFAwAB/wMAAf8DNgFZ/wBNAAEBAgAB/wIAAQEB/wsAAf8BAAEBAQAB/wsAAf8D
-        AAH/CAABAQIAAf8CAAEBAf8YAAMtAUUDAAH/AwAB/wMAAf8DAAH/AzMBU3gAAy0BRQMAAf8DAAH/AwAB
-        /wMAAf8DMwFT/wBJAAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8BAQIAAf8LAAH/AwAB/xQAAzgBXwMAAf8D
-        AAH/AwAB/wMAAf8DAAH/AwAB/wM/AXRwAAM4AV8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DPwF0/wBI
-        AAH/AgABAQH/CwAB/wEAAQEBAAH/CwAB/wMAAf8LAAH/AwAB/xAAAx0BKQMqAd4DMAHWAzcBzgM3Ac4D
-        NwHOAzcBzgMyAdMDIQHmAyQBNFAAAxABFQMqAUADIQEvDAADHQEpAyoB3gMwAdYDNwHOAzcBzgM3Ac4D
-        NwHOAzIB0wMhAeYDJAE0/wBEAAH/AwAB/woAAQEB/wMAAf8JAAEBAQAB/wMAAf8LAAH/AgABAQH/VAAD
-        OQHIAwAB/wMAAf8DAAH/AwAB/wM5AWAcAANFAZ4DAAH/A0MBhv8AdQABAQIAAf8CAAEBAf8LAAH/AwAB
-        /wsAAf8DAAH/CwAB/wMAAf9UAAM5AcgDAAH/AwAB/wMAAf8DPgFvHAADJQE3AwQB/QMAAf8DIQEv/wB1
-        AAEBAgAB/wMAAf8oAAEBAgAB/wMAAf9UAAM5AcgBAQIAAf8DAAH/AxMB8gMrAUEYAAMtAUUBIAEhASAB
-        5wMAAf8DRQGh/wB8AAH/AwAB/ysAAf8DAAH/VAADOQHIAwAB/wMdAeoDAAH/AwAB/wNFAaADMgFPAxEB
-        FgMVAR0DMwFRA0QBpAMAAf8DAAH/AzcBywMGAQf/AHgAAf8DAAH/AwAB/wMAAf8DAAH/AgABAQH/AwAB
-        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wEBAgAB/wMAAf8DAAH/UAADOQHHA0QBjwMFAQYDRAGKAwQB
-        /QMAAf8DAAH/AwAB/wMAAf8DAAH/AQECAAH/AwQB/ANDAYUDBQEG/wB8AAH/AQECAAH/AwAB/wEAAQEB
-        AAH/AQECAAH/AwAB/wMAAf8DAAH/AgABAQH/AQABAQEAAf8DAAH/AgABAQH/AQABAQEAAf8BAQIAAf8D
-        AAH/AwAB/1AAAzEBTgwAAyYBOQNEAZkDPQHBAxcB7gIdAR4B6wM9AcEDRQGYAyUBNv8AmAAB/wEAAQEB
-        AAH/AQECAAH/AwAB/wMAAf8BAQIAAf//AP8A/wD/AP8A/wD/AP8AzAABQgFNAT4HAAE+AwABKAMAAZAD
-        AAEYAwABAQEAAQEFAAHgAQEWAAP/AQAJ/wsACf8LAAn/CwAB+AEAAR8G/wsAAfgBAAEfAv8B8AEOAv8L
-        AAH5Af8BnwL/AcABAAL/CwAB+QH/AZ8C/wGAAQAC/wsAAfkBmQGfAv8BhwHgAv8LAAH5AZkBnwL/AQ8B
-        4AL/CwAB+QGZAZ8B5wH/AR8BwAH+AX8LAAH5AZkBnwHDAf8BHwH/AfwBPwsAAfkBmQGfAYED/wH4AR8L
-        AAH5AZkBnwEAA/8B8AEPCwAB+QGZAZ4BAAF/Af8B+AHgAQcLAAH5AZkBnwL/AQMB+AL/CwAB+QGZAZ8C
-        /wEHAfAC/wsAAfkB/wGfAv8BBwHhAv8LAAH5Af8BnwL/AQABAQL/CwAB8AEAAQ8C/wEAAQMC/wsAAfAB
-        AAEPAv8BcAEPAv8LAAH/AYEH/wsACf8LAAn/CwAJ/wsACw==
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAWggAAAJNU0Z0AUkBTAIBAQIB
+        AAEgAQABIAEAASQBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABkAMAARgDAAEBAQABIAYAATb/
+        AP8A/wD/AP8A/wDsAAM0AVQDRQHbAwAB/wMAAf8DAAH/AQABAQEAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DRwHYAzQBVP8A/wAKAANJAdUCAAEBAf8DAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wEBAgAB/wJJAUoB1WQAAyYBOQNNAZkDTwHBAyoB7gMzAesDTwHBA00BmAMlATYM
+        AAMzAVD/AHUAAQECAAH/AgABAQH/KwAB/wMAAf9cAAMFAQYDSgGJAwgB/QMAAf8BAAEBAQAB/wMAAf8D
+        AAH/AwAB/wEBAgAB/wMIAfwDSQGHAwUBBgNLAY8DTgHG/wB4AAH/AwAB/ysAAf8DAAH/WAADAwEEA04B
+        ygEAAQEBAAH/AQECAAH/A1ABpAMyAU8DEQEWAxUBHQMzAVEDUAGkAwAB/wMAAf8DMwHrAwAB/wNQAcX/
+        AHUAAQECAAH/AgABAQH/CgABAQH/AQABAQEAAf8LAAH/AwAB/wsAAf8DAAH/WAADRwGDAwAB/wM2AecD
+        LQFEGAADLQFGARgBGQEYAfcDAAH/AwAB/wNQAcX/AHUAAQECAAH/AgABAQH/CgABAQH/AwAB/wsAAf8D
+        AAH/CAABAQIAAf8DAAH/VAADGAEgAwQB/gMEAf4DJgE4HAADQwF3AwAB/wEBAgAB/wMAAf8DUAHF/wB1
+        AAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8DAAH/CAABAQIAAf8DAAH/IAADOQFfA0ABbywAA0YBgQMAAf8D
+        TwGdHAADPQFoAgABAQH/AQABAQEAAf8BAQIAAf8DAAH/A08BxxwAAzkBXwNAAW//AFEAAQECAAH/AwAB
+        /wsAAf8BAAEBAQAB/wsAAf8DAAH/CwAB/wIAAQEB/xwAAy0BRQMAAf8DAAH/AzYBWSgAAyEBLwMqAUAD
+        DwEUTAADLQFFAwAB/wMAAf8DNgFZ/wBNAAEBAgAB/wIAAQEB/wsAAf8BAAEBAQAB/wsAAf8DAAH/CAAB
+        AQIAAf8CAAEBAf8YAAMtAUUDAAH/AwAB/wMAAf8DAAH/AzQBU3gAAy0BRQMAAf8DAAH/AwAB/wMAAf8D
+        NAFT/wBJAAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8BAQIAAf8LAAH/AwAB/xQAAzkBXwMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wNCAXRwAAM5AV8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DQgF0/wBIAAH/AgAB
+        AQH/CwAB/wEAAQEBAAH/CwAB/wMAAf8LAAH/AwAB/xAAAx0BKQNCAd4DRgHWA04BzgNOAc4DTgHOA04B
+        zgNKAdMDOAHmAyQBNFAAAxABFQMqAUADIQEvDAADHQEpA0IB3gNGAdYDTgHOA04BzgNOAc4DTgHOA0oB
+        0wM4AeYDJAE0/wBEAAH/AwAB/woAAQEB/wMAAf8JAAEBAQAB/wMAAf8LAAH/AgABAQH/VAADUAHIAwAB
+        /wMAAf8DAAH/AwAB/wM6AWAcAANOAZ4DAAH/A0gBhv8AdQABAQIAAf8CAAEBAf8LAAH/AwAB/wsAAf8D
+        AAH/CwAB/wMAAf9UAANQAcgDAAH/AwAB/wMAAf8DQAFvHAADJQE3AwgB/QMAAf8DIQEv/wB1AAEBAgAB
+        /wMAAf8oAAEBAgAB/wMAAf9UAANQAcgBAQIAAf8DAAH/AyMB8gMrAUEYAAMtAUUBNgE3ATYB5wMAAf8D
+        UAGh/wB8AAH/AwAB/ysAAf8DAAH/VAADUAHIAwAB/wMyAeoDAAH/AwAB/wNQAaADMgFPAxEBFgMVAR0D
+        MwFRA1ABpAMAAf8DAAH/A04BywMGAQf/AHgAAf8DAAH/AwAB/wMAAf8DAAH/AgABAQH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wEBAgAB/wMAAf8DAAH/UAADTwHHA0sBjwMFAQYDSgGKAwgB/QMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AQECAAH/AwgB/ANIAYUDBQEG/wB8AAH/AQECAAH/AwAB/wEAAQEBAAH/AQEC
+        AAH/AwAB/wMAAf8DAAH/AgABAQH/AQABAQEAAf8DAAH/AgABAQH/AQABAQEAAf8BAQIAAf8DAAH/AwAB
+        /1AAAzEBTgwAAyYBOQNNAZkDTwHBAyoB7gMzAesDTwHBA00BmAMlATb/AJgAAf8BAAEBAQAB/wEBAgAB
+        /wMAAf8DAAH/AQECAAH//wD/AP8A/wD/AP8A/wD/AMwAAUIBTQE+BwABPgMAASgDAAGQAwABGAMAAQEB
+        AAEBBQAB4AEBFgAD/wEACf8LAAn/CwAJ/wsAAfgBAAEfBv8LAAH4AQABHwL/AfABDgL/CwAB+QH/AZ8C
+        /wHAAQAC/wsAAfkB/wGfAv8BgAEAAv8LAAH5AZkBnwL/AYcB4AL/CwAB+QGZAZ8C/wEPAeAC/wsAAfkB
+        mQGfAecB/wEfAcAB/gF/CwAB+QGZAZ8BwwH/AR8B/wH8AT8LAAH5AZkBnwGBA/8B+AEfCwAB+QGZAZ8B
+        AAP/AfABDwsAAfkBmQGeAQABfwH/AfgB4AEHCwAB+QGZAZ8C/wEDAfgC/wsAAfkBmQGfAv8BBwHwAv8L
+        AAH5Af8BnwL/AQcB4QL/CwAB+QH/AZ8C/wEAAQEC/wsAAfABAAEPAv8BAAEDAv8LAAHwAQABDwL/AXAB
+        DwL/CwAB/wGBB/8LAAn/CwAJ/wsACf8LAAs=
 </value>
   </data>
   <data name="BtnStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
