Added button to enable and disable the timeline

--- a/Utilities/UserControls/UserControlLogEntriesTextBox.resx
+++ b/Utilities/UserControls/UserControlLogEntriesTextBox.resx
@@ -138,4 +138,14 @@
         4zL3W+jiZyuO0b8Z/9gGpqOYhcYQXY61wA9RxEeXXIzogQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="ChkTimelineVisible.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADoSURBVDhPdVOLFcJACCPruIQOUedxn07hPC5xPgIcn9feEzlKAoSqyM3BDNCeXBzox0GAgISI
+        E5Mu8plcIvJmuL8qVDtEPKbxkAWSxJEadKu49liAHCV+iYjao6rp/SNBg0vYZZfLOje+ztN2RE/CuwAX
+        VBbkjCYGG74cJRQJJKusn0C+UBN5Wqp0z0MJH9UN074oC9xNFDuSVkcICan7zlziRQGwmwFdu9/H8/RZ
+        wDdvExQyx3ZCkPm6Le6/bgO4jChUbBYgZ09gN0/mFJVky8zCxi0jzO3mn6ll+qVOUOXsDWuRAZ7IP29z
+        U7kHKZasAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
