Added visible log entries range to timeline control. Added settings to show/hide timeline by default

--- a/Utilities/UserControls/UserControlLogEntriesTextBox.resx
+++ b/Utilities/UserControls/UserControlLogEntriesTextBox.resx
@@ -140,12 +140,12 @@
   </data>
   <data name="ChkTimelineVisible.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADoSURBVDhPdVOLFcJACCPruIQOUedxn07hPC5xPgIcn9feEzlKAoSqyM3BDNCeXBzox0GAgISI
-        E5Mu8plcIvJmuL8qVDtEPKbxkAWSxJEadKu49liAHCV+iYjao6rp/SNBg0vYZZfLOje+ztN2RE/CuwAX
-        VBbkjCYGG74cJRQJJKusn0C+UBN5Wqp0z0MJH9UN074oC9xNFDuSVkcICan7zlziRQGwmwFdu9/H8/RZ
-        wDdvExQyx3ZCkPm6Le6/bgO4jChUbBYgZ09gN0/mFJVky8zCxi0jzO3mn6ll+qVOUOXsDWuRAZ7IP29z
-        U7kHKZasAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAOhJREFUOE91
+        U4sVwkAII+u4hA5R53GfTuE8LnE+Ahyf194TOUoChKrIzcEM0J5cHOjHQYCAhIgTky7ymVwi8ma4vypU
+        O0Q8pvGQBZLEkRp0q7j2WIAcJX6JiNqjqun9I0GDS9hll8s6N77O03ZET8K7ABdUFuSMJgYbvhwlFAkk
+        q6yfQL5QE3laqnTPQwkf1Q3TvigL3E0UO5JWRwgJqfvOXOJFAbCbAV2738fz9FnAN28TFDLHdkKQ+bot
+        7r9uA7iMKFRsFiBnT2A3T+YUlWTLzMLGLSPM7eafqWX6pU5Q5ewNa5EBnsg/b3NTuQcplqwAAAAASUVO
+        RK5CYII=
 </value>
   </data>
 </root>
