Added Splitbutton control

--- a/FormLogScraper.resx
+++ b/FormLogScraper.resx
@@ -146,6 +146,60 @@
         TWMG/wCbz3YvZOfWxgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="ContextMenuReset.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>111, 17</value>
+  </metadata>
+  <data name="BtnErase.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASVJREFUSEul
+        VAkOwjAMS//I15GQeMwQabracTJAWKqWq3aTbjP7CaN6kFWjyHsIibBGAoguThjN6dj+SyflDxt2mI3D
+        bV9uZ03diYjUJhJSO8YZR5tqemwBXk50uT4JaGsXxdVYuJ6YZGJTTAXqwqIeXxACb4ixLGTBS18FNJI3
+        nH5MUwT2gXR+lasdTNLt5/ysaYDTmVZNQL6PscsHVoUo4x148kMHUa88ObBQdBACsUXyKEC0cWkpcX7J
+        u4M5llUgHaCPnA14RPIWdQJy0BaFwOUdsN8IUDgTMJShqR/9HeB3oHxv0C+BRqQIFcjf5Q+6v95i+YHu
+        QMYnp8TEzcye3wvYY7z3CHdqCUZEcQRm+qqFqoNiVxGSaF1ToddxYJcyCrQDL4f+mBSfa4sBAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <metadata name="imageListBtnErase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>265, 17</value>
+  </metadata>
+  <data name="imageListBtnErase.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAAgcAAAJNU0Z0AUkBTAIBAQIB
+        AAEQAQABEAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAARgDAAEBAQABIAYAAST/
+        AP8A/wD/AKoAAzMBVAMsAdsDAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMvAdgDMwFU/wBJAAMwAdUCAAEBAf8DAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wEBAgAB/wIwATEB1TQAAyYBOQNEAZkDPQHBARgCFwHuAx0B6wM9AcEDRQGYAyUBNgwAAzIB
+        UOQAAQECAAH/AgABAQH/KwAB/wMAAf8sAAMFAQYDRAGJAwQB/QMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB
+        /wEBAgAB/wMEAfwDQwGHAwUBBgJEAUUBjwM6AcbnAAH/AwAB/ysAAf8DAAH/KAADAwEEAzkBygEAAQEB
+        AAH/AQECAAH/A0QBpAMyAU8DEQEWAxUBHQMzAVEBRQJEAaQDAAH/AwAB/wMdAesDAAH/AzsBxeQAAQEC
+        AAH/AgABAQH/CgABAQH/AQABAQEAAf8LAAH/AwAB/wsAAf8DAAH/KAADQwGDAwAB/wMgAecDLAFEGAAD
+        LQFGAQ4BDwEOAfcDAAH/AwAB/wM7AcXkAAEBAgAB/wIAAQEB/woAAQEB/wMAAf8LAAH/AwAB/wgAAQEC
+        AAH/AwAB/yQAAxgBIAMCAf4DAgH+AyYBOBwAA0ABdwMAAf8BAQIAAf8DAAH/AzsBxeQAAQECAAH/AwAB
+        /wsAAf8DAAH/CwAB/wMAAf8IAAEBAgAB/wMAAf8kAANCAYEDAAH/A0UBnRwAAzwBaAIAAQEB/wEAAQEB
+        AAH/AQECAAH/AwAB/wM5AcfkAAEBAgAB/wMAAf8LAAH/AQABAQEAAf8LAAH/AwAB/wsAAf8CAAEBAf8k
+        AAMhAS8DKgFAAw8BFP8AGQABAQIAAf8CAAEBAf8LAAH/AQABAQEAAf8LAAH/AwAB/wgAAQECAAH/AgAB
+        AQH//wBJAAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8BAQIAAf8LAAH/AwAB//8ATAAB/wIAAQEB/wsAAf8B
+        AAEBAQAB/wsAAf8DAAH/CwAB/wMAAf9YAAMQARUDKgFAAyEBL+cAAf8DAAH/CgABAQH/AwAB/wkAAQEB
+        AAH/AwAB/wsAAf8CAAEBAf8kAAM5AcgDAAH/AwAB/wMAAf8DAAH/AzkBYBwAA0UBngMAAf8DQwGG5AAB
+        AQIAAf8CAAEBAf8LAAH/AwAB/wsAAf8DAAH/CwAB/wMAAf8kAAM5AcgDAAH/AwAB/wMAAf8DPgFvHAAD
+        JQE3AwQB/QMAAf8DIQEv5AABAQIAAf8DAAH/KAABAQIAAf8DAAH/JAADOQHIAQECAAH/AwAB/wMTAfID
+        KwFBGAADLQFFASABIQEgAecDAAH/A0UBoesAAf8DAAH/KwAB/wMAAf8kAAM5AcgDAAH/Ax0B6gMAAf8D
+        AAH/A0UBoAMyAU8DEQEWAxUBHQMzAVEDRAGkAwAB/wMAAf8DNwHLAwYBB+cAAf8DAAH/AwAB/wMAAf8D
+        AAH/AgABAQH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wEBAgAB/wMAAf8DAAH/IAADOQHHA0QB
+        jwMFAQYDRAGKAwQB/QMAAf8DAAH/AwAB/wMAAf8DAAH/AQECAAH/AwQB/ANDAYUDBQEG6wAB/wEBAgAB
+        /wMAAf8BAAEBAQAB/wEBAgAB/wMAAf8DAAH/AwAB/wIAAQEB/wEAAQEBAAH/AwAB/wIAAQEB/wEAAQEB
+        AAH/AQECAAH/AwAB/wMAAf8gAAMxAU4MAAMmATkDRAGZAz0BwQMXAe4CHQEeAesDPQHBA0UBmAMlATb/
+        AAgAAf8BAAEBAQAB/wEBAgAB/wMAAf8DAAH/AQECAAH//wD/AP8A/wD/AMkAAUIBTQE+BwABPgMAASgD
+        AAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEABv8GAAb/BgAG/wYAAfgBAAEfA/8GAAH4AQABHwH/AQAB
+        7wYAAfkB/wGfAfwBAAEPBgAB+QH/AZ8B+AEAAQ8GAAH5AZkBnwH4AX4BDwYAAfkBmQGfAfAB/gEPBgAB
+        +QGZAZ8B8QH8AQ8GAAH5AZkBnwHxAv8GAAH5AZkBnwP/BgAB+QGZAZ8D/wYAAfkBmQGfAv8BjwYAAfkB
+        mQGfAfABPwGPBgAB+QGZAZ8B8AF/AQ8GAAH5Af8BnwHwAX4BHwYAAfkB/wGfAfABAAEfBgAB8AEAAQ8B
+        8AEAAT8GAAHwAQABDwH3AQAB/wYAAf8BgQT/BgAG/wYABv8GAAb/BgAL
+</value>
+  </data>
   <data name="BtnConfig.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAWJJREFUOE+1
@@ -198,52 +252,6 @@
         lQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="imageListBtnErase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>265, 17</value>
-  </metadata>
-  <data name="imageListBtnErase.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
-        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAUAgAAAJNU0Z0AUkBTAIBAQIB
-        AAFIAQABSAEAASQBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABkAMAARgDAAEBAQABIAYAATb/
-        AP8A/wD/AP8A/wDsAAM0AVQDWwHbAwAB/wMAAf8DAAH/AQABAQEAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
-        /wMAAf8DWwHYAzQBVP8A/wAKAANcAdUCAAEBAf8DAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB
-        /wMAAf8DAAH/AwAB/wEBAgAB/wNcAdVkAAMmATkDTwGZA1kBwQNHAe4DTwHrA1kBwQNOAZgDJQE2DAAD
-        MwFQ/wB1AAEBAgAB/wIAAQEB/ysAAf8DAAH/XAADBQEGA0oBiQMSAf0DAAH/AQABAQEAAf8DAAH/AwAB
-        /wMAAf8BAQIAAf8DEgH8A0kBhwMFAQYDSwGPA1kBxv8AeAAB/wMAAf8rAAH/AwAB/1gAAwMBBANbAcoB
-        AAEBAQAB/wEBAgAB/wNRAaQDMgFPAxEBFgMVAR0DMwRRAaQDAAH/AwAB/wNPAesDAAH/A1sBxf8AdQAB
-        AQIAAf8CAAEBAf8KAAEBAf8BAAEBAQAB/wsAAf8DAAH/CwAB/wMAAf9YAANHAYMDAAH/A1MB5wMtAUQY
-        AAMtAUYBLgEvAS4B9wMAAf8DAAH/A1sBxf8AdQABAQIAAf8CAAEBAf8KAAEBAf8DAAH/CwAB/wMAAf8I
-        AAEBAgAB/wMAAf9UAAMYASADCQH+AwkB/gMmATgcAANDAXcDAAH/AQECAAH/AwAB/wNbAcX/AHUAAQEC
-        AAH/AwAB/wsAAf8DAAH/CwAB/wMAAf8IAAEBAgAB/wMAAf8gAAM5AV8DQAFvLAADRgGBAwAB/wNQAZ0c
-        AAM9AWgCAAEBAf8BAAEBAQAB/wEBAgAB/wMAAf8DWgHHHAADOQFfA0ABb/8AUQABAQIAAf8DAAH/CwAB
-        /wEAAQEBAAH/CwAB/wMAAf8LAAH/AgABAQH/HAADLQFFAwAB/wMAAf8DNgFZKAADIQEvAyoBQAMPARRM
-        AAMtAUUDAAH/AwAB/wM2AVn/AE0AAQECAAH/AgABAQH/CwAB/wEAAQEBAAH/CwAB/wMAAf8IAAEBAgAB
-        /wIAAQEB/xgAAy0BRQMAAf8DAAH/AwAB/wMAAf8DNAFTeAADLQFFAwAB/wMAAf8DAAH/AwAB/wM0AVP/
-        AEkAAQECAAH/AwAB/wsAAf8DAAH/CwAB/wEBAgAB/wsAAf8DAAH/FAADOQFfAwAB/wMAAf8DAAH/AwAB
-        /wMAAf8DAAH/A0IBdHAAAzkBXwMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNCAXT/AEgAAf8CAAEBAf8L
-        AAH/AQABAQEAAf8LAAH/AwAB/wsAAf8DAAH/EAADHQEpA1kB3gNbAdYDXQHOA10BzgNdAc4DXQHOA1sB
-        0wNUAeYDJAE0UAADEAEVAyoBQAMhAS8MAAMdASkDWQHeA1sB1gNdAc4DXQHOA10BzgNdAc4DWwHTA1QB
-        5gMkATT/AEQAAf8DAAH/CgABAQH/AwAB/wkAAQEBAAH/AwAB/wsAAf8CAAEBAf9UAANcAcgDAAH/AwAB
-        /wMAAf8DAAH/AzoBYBwAA1EBngMAAf8DSQGG/wB1AAEBAgAB/wIAAQEB/wsAAf8DAAH/CwAB/wMAAf8L
-        AAH/AwAB/1QAA1wByAMAAf8DAAH/AwAB/wNAAW8cAAMlATcDEgH9AwAB/wMhAS//AHUAAQECAAH/AwAB
-        /ygAAQECAAH/AwAB/1QAA1wByAEBAgAB/wMAAf8DPQHyAysBQRgAAy0BRQNTAecDAAH/A1EBof8AfAAB
-        /wMAAf8rAAH/AwAB/1QAA1wByAMAAf8DSwHqAwAB/wMAAf8DUgGgAzIBTwMRARYDFQEdAzMEUQGkAwAB
-        /wMAAf8DWwHLAwYBB/8AeAAB/wMAAf8DAAH/AwAB/wMAAf8CAAEBAf8DAAH/AwAB/wMAAf8DAAH/AwAB
-        /wMAAf8DAAH/AQECAAH/AwAB/wMAAf9QAANaAccDSwGPAwUBBgNKAYoDEgH9AwAB/wMAAf8DAAH/AwAB
-        /wMAAf8BAQIAAf8DEgH8A0kBhQMFAQb/AHwAAf8BAQIAAf8DAAH/AQABAQEAAf8BAQIAAf8DAAH/AwAB
-        /wMAAf8CAAEBAf8BAAEBAQAB/wMAAf8CAAEBAf8BAAEBAQAB/wEBAgAB/wMAAf8DAAH/UAADMQFODAAD
-        JgE5A08BmQNZAcEDRwHuA08B6wNZAcEDTgGYAyUBNv8AmAAB/wEAAQEBAAH/AQECAAH/AwAB/wMAAf8B
-        AQIAAf//AP8A/wD/AP8A/wD/AP8AzAABQgFNAT4HAAE+AwABKAMAAZADAAEYAwABAQEAAQEFAAHgAQEW
-        AAP/AQAJ/wsACf8LAAn/CwAB+AEAAR8G/wsAAfgBAAEfAv8B8AEOAv8LAAH5Af8BnwL/AcABAAL/CwAB
-        +QH/AZ8C/wGAAQAC/wsAAfkBmQGfAv8BhwHgAv8LAAH5AZkBnwL/AQ8B4AL/CwAB+QGZAZ8B5wH/AR8B
-        wAH+AX8LAAH5AZkBnwHDAf8BHwH/AfwBPwsAAfkBmQGfAYED/wH4AR8LAAH5AZkBnwEAA/8B8AEPCwAB
-        +QGZAZ4BAAF/Af8B+AHgAQcLAAH5AZkBnwL/AQMB+AL/CwAB+QGZAZ8C/wEHAfAC/wsAAfkB/wGfAv8B
-        BwHhAv8LAAH5Af8BnwL/AQABAQL/CwAB8AEAAQ8C/wEAAQMC/wsAAfABAAEPAv8BcAEPAv8LAAH/AYEH
-        /wsACf8LAAn/CwAJ/wsACw==
-</value>
-  </data>
   <data name="BtnStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAQVJREFUSEuN
@@ -254,9 +262,6 @@
         iAYHCSRUweSTu5liMn4BDZA1jEwCHAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="ContextMenuReset.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>111, 17</value>
-  </metadata>
   <data name="ToolStripMenuItemReset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUhJREFUOE9t
